--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,24 @@
 {
-  "version": "0.0.1",
   "files": [
+    {
+      "path": "versions/1.21.4-fabric/1.21.4-fabric.jar",
+      "url": "https://launcher.mojang.com/v1/objects/EXEMPLOHASH/client.jar",
+      "hash": "EXEMPLOHASH"
+    },
+    {
+      "path": "libraries/net/fabricmc/fabric-loader/0.15.7/fabric-loader-0.15.7.jar",
+      "url": "https://maven.fabricmc.net/net/fabricmc/fabric-loader/0.15.7/fabric-loader-0.15.7.jar",
+      "hash": "d41d8cd98f00b204e9800998ecf8427e"
+    },
+    {
+      "path": "libraries/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4.jar",
+      "url": "https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4/fabric-api-0.97.0+1.21.4.jar",
+      "hash": "d41d8cd98f00b204e9800998ecf8427e"
+    },
+    {
+      "path": "mods/mod-exemplo.jar",
+      "url": "https://seusite.com/mods/mod-exemplo.jar",
+      "hash": "d41d8cd98f00b204e9800998ecf8427e"
+    }
   ]
 }
