--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "hash": "d41d8cd98f00b204e9800998ecf8427e"
     },
     {
-      "path": "libraries/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4.jar",
+      "path": "libraries/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4/fabric-api-0.97.0+1.21.4.jar",
       "url": "https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4/fabric-api-0.97.0+1.21.4.jar",
       "hash": "d41d8cd98f00b204e9800998ecf8427e"
     }
