--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,11 @@
       "path": "libraries/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4/fabric-api-0.97.0+1.21.4.jar",
       "url": "https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api-0.97.0+1.21.4/fabric-api-0.97.0+1.21.4.jar",
       "hash": "d41d8cd98f00b204e9800998ecf8427e"
+    },
+    {
+      "path": "libraries/net/sf/jopt-simple/jopt-simple/5.0.4/jopt-simple-5.0.4.jar",
+      "url": "https://repo1.maven.org/maven2/net/sf/jopt-simple/jopt-simple/5.0.4/jopt-simple-5.0.4.jar",
+      "hash": "2f4f394b893a3ad949667d5631d99b86515e2b6c"
     }
   ]
 }
