--- a/manifest.json
+++ b/manifest.json
@@ -55,6 +55,11 @@
   "path": "libraries/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
   "url": "https://libraries.minecraft.net/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
   "hash": "somehashhere"
+},
+    {
+  "path": "libraries/io/netty/netty-all/4.1.95.Final/netty-all-4.1.95.Final.jar",
+  "url": "https://repo1.maven.org/maven2/io/netty/netty-all/4.1.95.Final/netty-all-4.1.95.Final.jar",
+  "hash": "hash-do-arquivo"
 }
 
   ]
