--- a/manifest.json
+++ b/manifest.json
@@ -26,41 +26,61 @@
       "hash": "ad63a6375e8bdf81e3692dbdc68f5b29a54b3cc7"
     },
     {
-  "path": "libraries/org/apache/logging/log4j/log4j-core/2.20.0/log4j-core-2.20.0.jar",
-  "url": "https://libraries.minecraft.net/org/apache/logging/log4j/log4j-core/2.20.0/log4j-core-2.20.0.jar",
-  "hash": "ad63a6375e8bdf81e3692dbdc68f5b29a54b3cc7"
-},
+      "path": "libraries/org/apache/logging/log4j/log4j-api/2.20.0/log4j-api-2.20.0.jar",
+      "url": "https://libraries.minecraft.net/org/apache/logging/log4j/log4j-api/2.20.0/log4j-api-2.20.0.jar",
+      "hash": "5989e6347b40a5d683a510c993f5a77d7bc26ff4"
+    },
     {
-  "path": "libraries/com/mojang/logging/1.1.4/logging-1.1.4.jar",
-  "url": "https://libraries.minecraft.net/com/mojang/logging/1.1.4/logging-1.1.4.jar",
-  "hash": "6212a15cb6bd951f2043a2fe3b06db104c5c3512"
-}
-,
-{
-  "path": "libraries/org/apache/logging/log4j/log4j-api/2.20.0/log4j-api-2.20.0.jar",
-  "url": "https://libraries.minecraft.net/org/apache/logging/log4j/log4j-api/2.20.0/log4j-api-2.20.0.jar",
-  "hash": "5989e6347b40a5d683a510c993f5a77d7bc26ff4"
-},
+      "path": "libraries/com/mojang/logging/1.0.0/logging-1.0.0.jar",
+      "url": "https://libraries.minecraft.net/com/mojang/logging/1.0.0/logging-1.0.0.jar",
+      "hash": "11c3ce1976e89bb1e6ab8e46a8a5dc1e40cb88de"
+    },
     {
-  "path": "libraries/com/mojang/logging/1.0.0/logging-1.0.0.jar",
-  "url": "https://libraries.minecraft.net/com/mojang/logging/1.0.0/logging-1.0.0.jar",
-  "hash": "11c3ce1976e89bb1e6ab8e46a8a5dc1e40cb88de"
-},
-{
-  "path": "libraries/org/slf4j/slf4j-api/1.8.0-beta4/slf4j-api-1.8.0-beta4.jar",
-  "url": "https://libraries.minecraft.net/org/slf4j/slf4j-api/1.8.0-beta4/slf4j-api-1.8.0-beta4.jar",
-  "hash": "743dfd8a1c51f6c0f2ce57064875fd3724c7d2c6"
-},
-{
-  "path": "libraries/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
-  "url": "https://libraries.minecraft.net/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
-  "hash": "somehashhere"
-},
+      "path": "libraries/com/mojang/logging/1.1.4/logging-1.1.4.jar",
+      "url": "https://libraries.minecraft.net/com/mojang/logging/1.1.4/logging-1.1.4.jar",
+      "hash": "6212a15cb6bd951f2043a2fe3b06db104c5c3512"
+    },
     {
-  "path": "libraries/io/netty/netty-all/4.1.95.Final/netty-all-4.1.95.Final.jar",
-  "url": "https://repo1.maven.org/maven2/io/netty/netty-all/4.1.95.Final/netty-all-4.1.95.Final.jar",
-  "hash": "hash-do-arquivo"
-}
+      "path": "libraries/org/slf4j/slf4j-api/1.8.0-beta4/slf4j-api-1.8.0-beta4.jar",
+      "url": "https://libraries.minecraft.net/org/slf4j/slf4j-api/1.8.0-beta4/slf4j-api-1.8.0-beta4.jar",
+      "hash": "743dfd8a1c51f6c0f2ce57064875fd3724c7d2c6"
+    },
+    {
+      "path": "libraries/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
+      "url": "https://libraries.minecraft.net/com/mojang/brigadier/1.1.4/brigadier-1.1.4.jar",
+      "hash": "somehashhere"
+    },
 
+    // NETTY módulos separados, substituindo netty-all
+    {
+      "path": "libraries/io/netty/netty-buffer/4.1.95.Final/netty-buffer-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-buffer/4.1.95.Final/netty-buffer-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    },
+    {
+      "path": "libraries/io/netty/netty-codec/4.1.95.Final/netty-codec-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-codec/4.1.95.Final/netty-codec-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    },
+    {
+      "path": "libraries/io/netty/netty-common/4.1.95.Final/netty-common-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-common/4.1.95.Final/netty-common-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    },
+    {
+      "path": "libraries/io/netty/netty-handler/4.1.95.Final/netty-handler-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-handler/4.1.95.Final/netty-handler-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    },
+    {
+      "path": "libraries/io/netty/netty-resolver/4.1.95.Final/netty-resolver-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-resolver/4.1.95.Final/netty-resolver-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    },
+    {
+      "path": "libraries/io/netty/netty-transport/4.1.95.Final/netty-transport-4.1.95.Final.jar",
+      "url": "https://repo1.maven.org/maven2/io/netty/netty-transport/4.1.95.Final/netty-transport-4.1.95.Final.jar",
+      "hash": "hash-do-arquivo"
+    }
   ]
 }
