--- a/manifest.json
+++ b/manifest.json
@@ -95,7 +95,13 @@
       "path": "libraries/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0.jar",
       "url": "https://repo1.maven.org/maven2/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0.jar",
       "hash": "c6842c86792ff03b9f1d1fe2aab8dc23aa6c6f0e"
+    },
+    {
+      "path": "libraries/it/unimi/dsi/fastutil/8.5.12/fastutil-8.5.12.jar",
+      "url": "https://libraries.minecraft.net/it/unimi/dsi/fastutil/8.5.12/fastutil-8.5.12.jar",
+      "hash": "464f3e7e87b9903317bfcf053d83f779ba5c8cf1"
     }
+
   ]
 }
 
