--- a/manifest.json
+++ b/manifest.json
@@ -98,8 +98,8 @@
     },
     {
       "path": "libraries/it/unimi/dsi/fastutil/8.5.11/fastutil-8.5.11.jar",
-      "url": "https://libraries.minecraft.net/it/unimi/dsi/fastutil/8.5.11/fastutil-8.5.11.jar",
-      "hash": "2e1adf2b5e420383b7ccaa48671dc8507b2387b8"
+      "url": "https://repo1.maven.org/maven2/it/unimi/dsi/fastutil/8.5.11/fastutil-8.5.11.jar",
+      "hash": "db3dbb47a54c65230c7a3ed00b1e695eae08872a"
     }
   ]
 }
